# Pillow_PNG_TGA_Editor

./: CHANGELOG.md  MANIFEST.in  NOTICE  README.MD  helper_funcs.py  main.py  mirror_concat_img.py  pillow_png_tga_editor.py  pyproject.toml  split_eyes_img.py
.github/workflows/: build_executable.yml  build_executable_nuitka.yml  pylint.yml  python-app.yml
images/: Pillows_Hat_Icon_Mirror.tga  Pillows_Hat_Icon_Split.tga
localization/en_US/: helper_funcs.yml  main.yml
localization/ru_RU/: main.yml
src/Pillow_PNG_TGA_Editor/: general_funcs.py  mirror_concat_img.py  pillow_png_tga_editor.py  split_eyes_img.py
src/Pillow_PNG_TGA_Editor/images/: Pillows_Hat_Icon.tga
src/Pillow_PNG_TGA_Editor/localization/en_US/: main.yml
